--- a/css/estilo.css
+++ b/css/estilo.css
@@ -50,7 +50,7 @@ body {
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    background-color: #fff;
+    background-color: #ffffff;
     width: 100%;
     padding: 1.3rem 0;
     border: 1px solid lightgray;
@@ -77,7 +77,7 @@ body {
 }
 
 .instagram-login {
-    /* margin-top: 6.5px; */
+    margin-top: 7.5px;
     background-color: #0095f6;
     color: #fff;
     padding: 8px;
